* 2012-10-15 - viktor.pracht@open-xchange.com

 - Fix for bug 23337: missing values in ui.properties

* 2012-10-15 - thorben.betten@open-xchange.com

 - Fix for bug 23324: More lenient dialing with FETCH responses
 - Fix for bug 23368: Special treatment for <hr> tag prior to html2text conversion

* 2012-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 23190: Maintain file name during move operation

* 2012-10-10 - thorben.betten@open-xchange.com

 - Fix for bug 23238: Properly dealing with transient map on serialization attempt

* 2012-10-10 - jan.bauerdick@open-xchange.com

 - Refactored report client, added yearly login counter

* 2012-10-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 23207: Use contact service to modify attachment count 

* 2012-10-09 - thorben.betten@open-xchange.com

 - Fix for bug 23219: Handle subsequent CRLFs in binary value
 - Fix for bug 23176: Checking for indication of 302 HTTP error code in thrown exception's message
 - Fix for bug 23229: Added CSS3 styles to white-list filter

* 2012-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 23199: Fixed composing reply text
 - Fix for bug 23202: Fixed possible NPE
 - Fix for bug 23203: Fixed possible NPE
 - Fix for bug 23204: Fixed possible NPE
 - Fix for bug 23205: Fixed possible NPE

* 2012-10-08 - marcus.klein@open-xchange.com

 - Fix for bug 23197: Removed snappy-java from OSGi 3rd party bundles.

* 2012-10-05 - jan.bauerdick@open-xchange.com

 - Improved c.o.aws for AWS S3 encryption
 - New bundle c.o.aws.s3: AWS S3 based file storage

* 2012-10-05 - thorben.betten@open-xchange.com

 - Fix for bug 23189: Further simplified and improved regex to look-up CSS blocks

* 2012-10-05 - tobias.friedrich@open-xchange.com

 - Fix for bug 23184: Corrected attachment condition
 - Fix for bug 23174: Send SC_CONFLICT when trying to create an appointment with already existing UID 
 
* 2012-10-04 - thorben.betten@open-xchange.com

 - Fix for bug 23170: Restored class' path