@@ -62,5 +62,7 @@ public interface AppointmentFields extends CalendarFields {
 	public static final String HARD_CONFLICT = "hard_conflict";
 
 	public static final String TIMEZONE = "timezone";
+    
+    public static final String IGNORE_OUTDATED_SEQUENCE = "ignoreOutdatedSequence";
 
 }
